--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #f9faff01;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -35,20 +35,24 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
+.fancy-button {
+      padding: 12px 24px;
+      font-size: 16px;
+      font-weight: bold;
+      color: rgb(12, 0, 0);
+      background: linear-gradient(45deg, #c3dee5, #bfff00d4);
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      background-size: 200% 200%;
+    }
+
+    .fancy-button:hover {
+      background-position: right center;
+      box-shadow: 0 0 15px #00c6ff, 0 0 30px #0072ff;
+      transform: scale(1.05);
+    }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
